--- a/src/app/layers/layers.component.html
+++ b/src/app/layers/layers.component.html
@@ -1,5 +1,17 @@
 <div class="layers">
-      <button (click)="deleteLayer()">Delete</button>
-      <button (click)="editLayer()">Edit</button>
-      <button (click)="hideLayer()">Hide</button>
+  <div *ngFor="let layer of layers; let i = index" 
+       class="layer-item" 
+       [class.selected]="selectedLayerIndex === i"
+       (click)="selectLayer(i)">
+       
+    <p>Layer {{ i + 1 }} ({{ layer.type }})</p>
+
+    <div *ngIf="selectedLayerIndex === i">
+      <button (click)="deleteLayer(i); $event.stopPropagation()">Delete</button>
+      <button (click)="editLayer(i); $event.stopPropagation()">Edit</button>
+      <button (click)="toggleLayerVisibility(i); $event.stopPropagation()">
+        {{ layer.visible ? 'Hide' : 'Show' }}
+      </button>
+    </div>
   </div>
+</div>
