--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="dialog-overlay" *ngIf="showPolygonDialog">
+  <div class="dialog-overlay" *ngIf="isAddShapeDialogOpen">
     <div class="dialog">
       <h3>Select Polygon Shape</h3>
       <button (click)="addSquareLayer()">Square</button>
