--- a/src/app/layers/layers.component.scss
+++ b/src/app/layers/layers.component.scss
@@ -3,7 +3,7 @@
   overflow-y: auto;
   border-left: 1px solid #ccc;
   padding: 1rem;
-  width: 220px;
+  width: 400px;
   background-color: #fafafa;
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.05);
   border-radius: 0 8px 8px 0;
@@ -20,6 +20,7 @@
   transition: background-color 0.25s, border-color 0.25s;
 
     button {
+      border-radius: 6px;
       padding: 0.6rem 0.6rem;
       background-color: #007bff;
       border: 1px solid #ccc;
