--- a/src/app/layers/layers.component.html
+++ b/src/app/layers/layers.component.html
@@ -1,7 +1,8 @@
 <div class="layers">
   <div class="layers" *ngIf="layers.length > 0">
 
-  <div *ngFor="let layer of layers; let i = index"
+    <!-- layer list -->
+  <div *ngFor="let layer of layers; let i = index" 
        class="layer-item"
        [class.selected]="selectedLayerIndex === i"
        (click)="selectLayer(i)">
@@ -25,7 +26,7 @@
 
         <!-- item controls -->
         <button (click)="deleteItem(i, j); $event.stopPropagation()">Delete</button>
-        <button (click)="editItem(i, j); $event.stopPropagation()">Edit</button>
+        <button (click)="editItem(j); $event.stopPropagation()">Edit</button>
         <button (click)="toggleItemVisibility(i, j); $event.stopPropagation()">
           {{ item.visible !== false ? 'Hide' : 'Show' }}
         </button>
